test_data/Xml/Unexpected/Unserializable/InvalidClassName/administrativeInformation/wrong.xml.exception
Expected an element representing an instance of class AdministrativeInformation with element name administrativeInformation, but got: utterlyInvalid at: the beginning